[package]
name = "vulkan-raytraced-voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
rapier3d = "0.17.2"
vulkano = "0.34.1"
vulkano-shaders = { version="0.34.0", features=["shaderc-build-from-source"]}
vulkano-win = "0.34.0"
winit = "0.28"
