[package]
name = "vulkan-raytraced-voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
nalgebra = "0.32.3"
noise = "0.8.2"
partition = "0.1.2"
rand = "0.8.5"
rapier3d = "0.17.2"
serde = { version="1.0.194", features=["derive"] }
serde_json = "1.0.110"
threadpool = "1.8.1"
vulkano = "0.34.1"
vulkano-shaders = { version="0.34.0", features=["shaderc-build-from-source"]}
vulkano-win = "0.34.0"
winit = "0.28"


# Add this to your Cargo.toml
[profile.dev.package.rapier3d]
opt-level = 3
